--- a/src/app/blockchain-evote/admin/managevoter-admin/election1-comingsoon-voter/election1-comingsoon-voter.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/election1-comingsoon-voter/election1-comingsoon-voter.component.html
@@ -146,6 +146,7 @@
                                         <th>รหัสนักศึกษา</th>
                                         <th style="width: 10rem;">ชื่อ</th>
                                         <th style="width: 10rem;">นามสกุล</th>
+                                        <th style="width: 10rem;">ชั้นปี</th>
                                         <th style="width: 15rem;">สาขาวิชา</th>
                                         <th style="width: 15rem;">คณะ</th>
                                         <th style="width: 5rem;"></th>
