--- a/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
@@ -62,7 +62,7 @@
                                                 </td>
                                                 <td (click)="goToOnVoteDetal(electionDetail.elecId)">
                                                     <div class="flex justify-content-center">
-                                                        {{electionDetail.countCandi}}
+                                                        {{electionDetail.countVoter}}
                                                     </div>
                                                 </td>
                                                 <td>
@@ -139,7 +139,7 @@
                                                 </td>
                                                 <td (click)="goToEditVoter(electionDetail.elecId)">
                                                     <div class="flex justify-content-center">
-                                                        {{electionDetail.countCandi}}
+                                                        {{electionDetail.countVoter}}
                                                     </div>
                                                 </td>
                                                 <td class="flex justify-content-center">
