--- a/src/app/blockchain-evote/admin/homepage-admin/election-detail-onvote/election-detail-onvote.component.html
+++ b/src/app/blockchain-evote/admin/homepage-admin/election-detail-onvote/election-detail-onvote.component.html
@@ -44,13 +44,13 @@
                                     <label for="Number" class="block text-xl"><b>ระยะเวลา : </b></label>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;background-color: #FFFAE5;">
+                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;">
                                 <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
                                     <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
                                     <label for="Number" class="block"><b>เริ่มต้น : {{election.elecStartdate | formatDate}}</b></label>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;background-color: #FFFAE5;">
+                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;">
                                 <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
                                     <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
                                     <label for="Number" class="block"><b>สิ้นสุด : {{election.elecEnddate | formatDate}}</b></label>
