--- a/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
@@ -186,12 +186,11 @@
                                         <ng-template pTemplate="header">
                                             <tr>
                                                 <th>รหัสรายการ</th>
-                                                <th>ชื่อรายการ</th>
-                                                <th>เริ่มต้นลงคะแนน</th>
-                                                <th>สิ้นลงคะแนน</th>
+                                                <th style="width: 20rem;">ชื่อรายการ</th>
+                                                <th style="width: 10rem;">เริ่มต้นลงคะแนน</th>
+                                                <th style="width: 10rem;">สิ้นสุดลงคะแนน</th>
                                                 <th>จำนวนผู้มีสิทธิ์ลงคะแนน</th>
-                                                <th style="width: 25vh;text-align: center;">
-                                                </th>
+                                                <th style="width: 10rem;text-align: center;"></th>
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="body" let-electionDetail>
