--- a/src/app/blockchain-evote/admin/manage-election/edit-election/edit-election.component.html
+++ b/src/app/blockchain-evote/admin/manage-election/edit-election/edit-election.component.html
@@ -67,7 +67,7 @@
                                             </div>
                                             <div style="width: 100%">
                                                 <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}"
-                                                    appendTo="body" [(ngModel)]="election.elecStartdate"></p-calendar>
+                                                    appendTo="body" [(ngModel)]="election.elecStartdate" ></p-calendar>
                                             </div>
                                         </div>
                                     </div>
@@ -80,7 +80,7 @@
                                             </div>
                                             <div style="width: 100%">
                                                 <p-calendar [showIcon]="true " inputId="test" [style]="{width: '100%'}"
-                                                    appendTo="body" [(ngModel)]="election.elecEnddate"></p-calendar>
+                                                    appendTo="body" [(ngModel)]="election.elecEnddate" ></p-calendar>
                                             </div>
                                         </div>
                                     </div>
@@ -103,7 +103,7 @@
                                             <div style="width: 100%">
                                                 <p-calendar [showIcon]="true" inputId="icon" [style]="{width: '100%'}"
                                                     appendTo="body"
-                                                    [(ngModel)]="election.elecRegisStartdate"></p-calendar>
+                                                    [(ngModel)]="election.elecRegisStartdate" ></p-calendar>
                                             </div>
                                         </div>
                                     </div>
@@ -120,29 +120,6 @@
                                                     [(ngModel)]="election.elecRegisEnddate"></p-calendar>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap card-container blue-container justify-content-center"
-                                style="max-width: 100% ">
-                                <div class="flex align-items-center justify-content-start border-round mt-2 "
-                                    style="min-width: 200px; min-height: 50px ">
-                                    <i class="pi pi-check-circle " style="font-size: 1rem;margin-right: 5px; "></i>
-                                    <label for="Number " class="block text-xl "><b>เปิดให้ลงคะแนน : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 "
-                                        style="min-width: 20px; min-height: 50px ">
-                                        <p-inputSwitch [(ngModel)]="election.elecOnVote"></p-inputSwitch>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap justify-content-center" style="max-width: 100% ">
-                                <div class="flex align-items-center justify-content-start border-round"
-                                    style="min-width: 200px; min-height: 10px ">
-                                    <i class="pi pi-check-circle " style="font-size: 1rem;margin-right: 5px; "></i>
-                                    <label for="Number " class="block text-xl "><b>เปิดให้ลงสมัคร : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 "
-                                        style="min-width: 20px; min-height: 10px ">
-                                        <p-inputSwitch [(ngModel)]="election.elecRegister"></p-inputSwitch>
                                     </div>
                                 </div>
                             </div>
@@ -176,9 +153,7 @@
                                 </div>
                                 <ng-template pTemplate="footer">
                                     <button pButton type="button" class="p-button buttonCheckColor m-2"
-                                        label="ตรวจสอบข้อมูล" [style]="{width: '100%'}"></button>
-                                    <button pButton type="button" class="p-button-danger m-2" label="ลบผู้ลงสมัคร"
-                                        [style]="{width: '100%'}"></button>
+                                        label="ตรวจสอบข้อมูล" [style]="{width: '100%'}" (click)="checkCandidate(candidate.candidate.candiId)"></button>
                                 </ng-template>
                             </p-card>
                         </div>
