--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -44,23 +44,23 @@
                                     <label for="Number" class="block text-xl"><b>ระยะเวลา : </b></label>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;background-color: #FFFAE5;">
+                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%">
                                 <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
                                     <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block"><b>เริ่มต้น : {{election.elecStartdate | dateTime}}</b></label>
+                                    <label for="Number" class="block text-l"><b>เริ่มต้น : {{election.elecStartdate | formatDate}}</b></label>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;background-color: #FFFAE5;">
+                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%">
                                 <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
                                     <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block"><b>สิ้นสุด : {{election.elecEnddate | dateTime}}</b></label>
+                                    <label for="Number" class="block text-l"><b>สิ้นสุด : {{election.elecEnddate | formatDate}}</b></label>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
-                                <div class="flex align-items-center justify-content-start border-round mt-2" style="min-width: 200px; min-height: 75px">
+                            <div class="flex flex-wrap card-container blue-container justify-content-center" style="max-width: 100%">
+                                <div class="flex align-items-center justify-content-center border-round mt-2" style="min-width: 200px; min-height: 75px">
                                     <i class="pi pi-check-circle" style="font-size: 1rem;margin-right: 5px;"></i>
                                     <label for="Number" class="block text-xl"><b>เปิดให้ลงคะแนน : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
+                                    <div class="flex align-items-center justify-content-center border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
                                         <p-inputSwitch [(ngModel)]="election.elecOnVote" [disabled]="true"></p-inputSwitch>
                                     </div>
                                 </div>
