--- a/src/app/blockchain-evote/admin/candidatelist-admin/candidate-detail/candidate-detail.component.html
+++ b/src/app/blockchain-evote/admin/candidatelist-admin/candidate-detail/candidate-detail.component.html
@@ -5,10 +5,9 @@
             <div class="flex-1 flex align-items-center justify-content-center m-2">
                 <p-panel header="ข้อมูลผู้ลงสมัคร">
                     <div class="card">
-                        <!-- ข้อมูลส่วนตัว -->
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-baseline justify-content-left">
-                                <label for="perInfo" class="block"><b>ข้อมูลส่วนตัว</b></label>
+                                <label for="perInfo" class="block"><b>ข้อมูลการลงสมัคร</b></label>
                             </div>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
@@ -22,12 +21,27 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round"
                                 style="min-width: 200px; min-height: 100px">
                                 <div class="field">
+                                    <label for="Number" class="block">พรรค</label>
+                                    <input id="Number" type="text" pInputText [(ngModel)]="candidateData.candiParty" />
+                                </div>
+                            </div>
+                        </div>
+                        <!-- ข้อมูลส่วนตัว -->
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                            <div class="flex align-items-baseline justify-content-left">
+                                <label for="perInfo" class="block"><b>ข้อมูลส่วนตัว</b></label>
+                            </div>
+                        </div>
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 100px">
+                                <div class="field">
                                     <label for="prefix" class="block">คำนำหน้าชื่อ</label>
                                     <input id="prefix" type="text" pInputText [(ngModel)]="studentData.prefix"
                                         disabled="true" />
                                 </div>
                             </div>
-                        </div>
+                        </div>  
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round"
                                 style="min-width: 200px; min-height: 100px">
@@ -316,7 +330,7 @@
                             <div class="flex align-items-center justify-content-left m-2 border-round"
                                 style="min-width: 200px; min-height: 100px">
                                 <img src="api/candidate/image/{{candidateData.candiImage}}" id="photo"
-                                    [style]="{width: '180px',height: '200px'}">
+                                    [style]="{width: '180px',height: '200px'}" (error)="defaultImage($event)">
                             </div>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
