--- a/src/app/blockchain-evote/admin/candidatelist-admin/candidatelist-admin.component.html
+++ b/src/app/blockchain-evote/admin/candidatelist-admin/candidatelist-admin.component.html
@@ -11,7 +11,7 @@
             <div class="flex-1 flex flex-wrap align-items-center justify-content-center m-2 px-5 py-3 border-round">
                 <div class="card">
                     <p-tabView styleClass="tabview-custom">
-                        <!-- <p-tabPanel>
+                        <p-tabPanel>
                             <ng-template pTemplate="header">
                                 <img src="assets\img\icon\voting-box.png" height="20" width="20"
                                     style="margin-right:10px;">
@@ -48,27 +48,27 @@
                                         </ng-template>
                                         <ng-template pTemplate="body" let-electionDetail>
                                             <tr>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecId}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecName}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecStartdate | formatDate}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecEnddate | formatDate}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     <div class="flex justify-content-center">
-                                                        {{electionDetail.countCandi}}
+                                                        {{electionDetail.countRegister}}
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <button pButton type="button" class="p-button buttonColor"
                                                         label="ตรวจสอบ" style="width: 100%;"
-                                                        (click)="goToElectionDetail(electionDetail.elecId)"></button>
+                                                        (click)="goToCandidateListDetail(electionDetail.elecId)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
@@ -81,7 +81,7 @@
                                     </p-table>
                                 </div>
                             </div>
-                        </p-tabPanel> -->
+                        </p-tabPanel>
                         <p-tabPanel header="Header II">
                             <ng-template pTemplate="header">
                                 <img src="assets\img\icon\coming-soon.png" height="20" width="20"
@@ -139,7 +139,7 @@
                                                 </td>
                                                 <td (click)="editCandidateList(electionDetail.elecId)">
                                                     <div class="flex justify-content-center">
-                                                        {{electionDetail.countCandi}}
+                                                        {{electionDetail.countRegister}}
                                                     </div>
                                                 </td>
                                                 <td class="flex justify-content-center">
@@ -158,7 +158,7 @@
                                 </div>
                             </div>
                         </p-tabPanel>
-                        <!-- <p-tabPanel header="Header III">
+                        <p-tabPanel header="Header III">
                             <ng-template pTemplate="header">
                                 <img src="assets\img\icon\success.png" height="20" width="20"
                                     style="margin-right:10px;">
@@ -196,27 +196,27 @@
                                         </ng-template>
                                         <ng-template pTemplate="body" let-electionDetail>
                                             <tr>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecId}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecName}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecStartdate | formatDate}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecEnddate | formatDate}}
                                                 </td>
-                                                <td (click)="goToElectionDetail(electionDetail.elecId)">
+                                                <td (click)="goToCandidateListDetail(electionDetail.elecId)">
                                                     <div class="flex justify-content-center">
-                                                        {{electionDetail.countCandi}}
+                                                        {{electionDetail.countRegister}}
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <button pButton type="button" class="p-button buttonColor"
                                                         label="ตรวจสอบ" style="width: 100%;"
-                                                        (click)="goToElectionDetail(electionDetail.elecId)"></button>
+                                                        (click)="goToCandidateListDetail(electionDetail.elecId)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
@@ -229,7 +229,7 @@
                                     </p-table>
                                 </div>
                             </div>
-                        </p-tabPanel> -->
+                        </p-tabPanel>
                     </p-tabView>
                 </div>
             </div>
