--- a/src/app/blockchain-evote/admin/homepage-admin/election-detail-onvote/election-detail-onvote.component.html
+++ b/src/app/blockchain-evote/admin/homepage-admin/election-detail-onvote/election-detail-onvote.component.html
@@ -6,68 +6,140 @@
                 <p-panel header="รายละเอียดการเลือกตั้ง">
                     <div class="card">
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex align-items-start justify-content-start border-round" style="min-width: 200px; min-height: 100px">
+                            <div class="flex align-items-start justify-content-start border-round"
+                                style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="Number" class="block text-xl"><b>ชื่อหัวข้อการเลือกตั้ง : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round" style="min-width: 200px; min-height: 50px">
+                                    <div class="flex align-items-center justify-content-start border-round"
+                                        style="min-width: 200px; min-height: 50px">
                                         <label for="Number" class="block">{{election.elecName}}</label>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex align-items-start justify-content-start border-round" style="min-width: 200px; min-height: 100px">
+                            <div class="flex align-items-start justify-content-start border-round"
+                                style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="Number" class="block text-xl"><b>รายละเอียดการเลือกตั้ง : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round" style="min-width: 200px; min-height: 50px">
+                                    <div class="flex align-items-center justify-content-start border-round"
+                                        style="min-width: 200px; min-height: 50px">
                                         <label for="Number" class="block">{{election.elecDetail}}</label>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 10px">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 10px">
                             </div>
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 10px">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 10px">
                             </div>
-                            <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 10px">
+                            <div class="flex align-items-center justify-content-center m-2 border-round"
+                                style="min-width: 200px; min-height: 10px">
                             </div>
                         </div>
                     </div>
                 </p-panel>
-                <div class="flex align-items-center justify-content-center m-3">
+                <div class="flex m-3">
                     <p-panel header="ระยะเวลาและสถานะ">
                         <div class="card">
-                            <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
-                                <div class="flex align-items-center justify-content-start border-round" style="min-width: 200px;">
-                                    <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block text-xl"><b>ระยะเวลา : </b></label>
+                            <div class="flex flex-row flex-wrap card-container blue-container">
+                                <div class="m-2">
+                                    <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
+                                        <div class="flex align-items-center justify-content-start border-round"
+                                            style="min-width: 200px;">
+                                            <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
+                                            <label for="Number" class="block text-xl"><b>ระยะเวลาลงคะแนน :
+                                                </b></label>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300"
+                                        style="max-width: 100%">
+                                        <div class="flex-row align-items-center justify-content-center border-round"
+                                            style="min-width: 100%; min-height: 20px">
+                                            <div class="flex">
+                                                <label for="Number" class="block text-xl"><b>เริ่มต้น :
+                                                    </b></label>
+                                            </div>
+                                            <div class="text-l" style="width: 100%">
+                                                {{election.elecStartdate | formatDate}}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300 "
+                                        style="max-width: 100% ">
+                                        <div class="flex-row align-items-center justify-content-center border-round "
+                                            style="min-width: 100%; min-height: 50px ">
+                                            <div class="flex">
+                                                <label for="Number " class="block text-xl"><b>สิ้นสุด :
+                                                    </b></label>
+                                            </div>
+                                            <div class="text-l" style="width: 100%">
+                                                {{election.elecEnddate | formatDate}}
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;">
-                                <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
-                                    <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block"><b>เริ่มต้น : {{election.elecStartdate | formatDate}}</b></label>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;">
-                                <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
-                                    <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block"><b>สิ้นสุด : {{election.elecEnddate | formatDate}}</b></label>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap card-container justify-content-center blue-container " style="max-width: 100%">
-                                <div class="flex align-items-center justify-content-start border-round mt-2" style="min-width: 200px; min-height: 75px">
-                                    <i class="pi pi-check-circle" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block text-xl"><b>เปิดให้ลงคะแนน : </b></label>
-                                    <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
-                                        <p-inputSwitch [(ngModel)]="election.elecOnVote" [disabled]="true"></p-inputSwitch>
+                                <div class="m-2">
+                                    <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
+                                        <div class="flex align-items-center justify-content-start border-round"
+                                            style="min-width: 200px;">
+                                            <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
+                                            <label for="Number" class="block text-xl"><b>ระยะเวลาลงสมัคร :
+                                                </b></label>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300"
+                                        style="max-width: 100%">
+                                        <div class="flex-row align-items-center justify-content-center border-round"
+                                            style="min-width: 100%; min-height: 20px">
+                                            <div class="flex">
+                                                <label for="Number" class="block text-xl"><b>เริ่มต้น :
+                                                    </b></label>
+                                            </div>
+                                            <div class="text-l" style="width: 100%">
+                                                {{election.elecRegisStartdate | formatDate}}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-wrap card-container blue-container border-round mt-2 border-300 "
+                                        style="max-width: 100% ">
+                                        <div class="flex-row align-items-center justify-content-center border-round "
+                                            style="min-width: 100%; min-height: 50px ">
+                                            <div class="flex">
+                                                <label for="Number " class="block text-xl"><b>สิ้นสุด :
+                                                    </b></label>
+                                            </div>
+                                            <div class="text-l" style="width: 100%">
+                                                {{election.elecRegisEnddate | formatDate}}
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="flex flex-wrap card-container justify-content-center blue-container "
+                            style="max-width: 100%">
+                            <div class="flex align-items-center justify-content-start border-round mt-2"
+                                style="min-width: 200px; min-height: 75px">
+                                <i class="pi pi-check-circle"
+                                    style="font-size: 1rem;margin-right: 5px;"></i>
+                                <label for="Number" class="block text-xl"><b>เปิดให้ลงคะแนน :
+                                    </b></label>
+                                <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 "
+                                    style="min-width: 20px; min-height: 75px ">
+                                    <p-inputSwitch [(ngModel)]="election.elecOnVote"
+                                        [disabled]="true"></p-inputSwitch>
+                                </div>
+                            </div>
+                        </div>
                             <div class="flex flex-wrap card-container" style="max-width: 100%">
-                                <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 240px; min-height: 5px">
-                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบผลคะแนน" icon="pi pi-check" [style]="{width: '100%'}" (click)="goToVotingScore()"></button>
+                                <div class="flex align-items-center justify-content-center m-2 border-round"
+                                    style="min-width: 440px; min-height: 5px">
+                                    <button pButton type="button" class="p-button buttonColor"
+                                        label="ตรวจสอบผลคะแนน" icon="pi pi-check" [style]="{width: '100%'}"
+                                        (click)="goToVotingScore()"></button>
                                 </div>
                             </div>
                         </div>
@@ -76,35 +148,38 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div class="flex justify-content-center">
-        <div class="flex flex-wrap card-container m-2 justify-content-center" style="max-width: 80%">
-            <p-panel header="รายชื่อผู้ลงสมัคร" #pnl>
-                <div class="flex flex-wrap card-container align-items-center justify-content-center">
-                    <div class="flex m-2" *ngFor="let candidate of electionAndCandiList">
-                        <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
-                            <ng-template pTemplate="header">
-                                <div class="flex justify-content-center">
-                                    <img src="api/candidate/image/{{candidate.candidate.candiImage}}" id="photo" [style]="{width: '80%',height: '280px'}" (error)="defaultImage($event)">
-                                </div>
-                            </ng-template>
+<div class="flex justify-content-center">
+    <div class="flex flex-wrap card-container m-2 justify-content-center" style="max-width: 80%">
+        <p-panel header="รายชื่อผู้ลงสมัคร" #pnl>
+            <div class="flex flex-wrap card-container align-items-center justify-content-center">
+                <div class="flex m-2" *ngFor="let candidate of electionAndCandiList">
+                    <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
+                        <ng-template pTemplate="header">
                             <div class="flex justify-content-center">
-                                <b> ชื่อผู้ลงสมัคร :  </b>&nbsp; {{candidate.candidate.name}}
+                                <img src="api/candidate/image/{{candidate.candidate.candiImage}}" id="photo"
+                                    [style]="{width: '80%',height: '280px'}" (error)="defaultImage($event)">
                             </div>
-                            <div class="flex justify-content-center">
-                                <b> เบอร์ : </b>&nbsp; {{candidate.candidate.candiNo}}
-                            </div>
-                            <div class="flex justify-content-center">
-                                <b> พรรค : </b>&nbsp; {{candidate.candidate.candiParty}}
-                            </div>
-                            <ng-template pTemplate="footer">
-                                <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบข้อมูล" [style]="{width: '100%'}" (click)="goToCandidateDetail(candidate.candidate.candiId)"></button>
-                            </ng-template>
-                        </p-card>
-                    </div>
+                        </ng-template>
+                        <div class="flex justify-content-center">
+                            <b> ชื่อผู้ลงสมัคร : </b>&nbsp; {{candidate.candidate.name}}
+                        </div>
+                        <div class="flex justify-content-center">
+                            <b> เบอร์ : </b>&nbsp; {{candidate.candidate.candiNo}}
+                        </div>
+                        <div class="flex justify-content-center">
+                            <b> พรรค : </b>&nbsp; {{candidate.candidate.candiParty}}
+                        </div>
+                        <ng-template pTemplate="footer">
+                            <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบข้อมูล"
+                                [style]="{width: '100%'}"
+                                (click)="goToCandidateDetail(candidate.candidate.candiId)"></button>
+                        </ng-template>
+                    </p-card>
                 </div>
-            </p-panel>
-        </div>
+            </div>
+        </p-panel>
     </div>
 </div>
 
