--- a/src/app/blockchain-evote/admin/manage-election/manage-election.component.html
+++ b/src/app/blockchain-evote/admin/manage-election/manage-election.component.html
@@ -46,7 +46,7 @@
                                                 <th style="width: 10rem;text-align: center;"></th>
                                             </tr>
                                         </ng-template>
-                                        <ng-template pTemplate="body" let-electionDetail>
+                                        <ng-template pTemplate="body" let-electionDetail let-i="rowIndex">
                                             <tr>
                                                 <td (click)="goToElectionDetail(electionDetail.elecId)">
                                                     {{electionDetail.elecId}}
@@ -66,9 +66,12 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <button pButton type="button" class="p-button buttonColor"
-                                                        label="ตรวจสอบ" style="width: 100%;"
+                                                    <button pButton type="button" class="p-button-rounded buttonColor mr-2"
+                                                        icon="pi pi-search"
                                                         (click)="goToElectionDetail(electionDetail.elecId)"></button>
+                                                    <button pButton pRipple type="button" icon="pi pi-trash"
+                                                        class="p-button-rounded p-button-danger"
+                                                        (click)="deleteElectionOnVoteList(electionDetail.elecId,i)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
@@ -147,7 +150,8 @@
                                                         class="p-button-rounded p-button-warning mr-2"
                                                         (click)="editElection(electionDetail.elecId)"></button>
                                                     <button pButton pRipple type="button" icon="pi pi-trash"
-                                                        class="p-button-rounded p-button-danger" (click)="deleteElection(electionDetail.elecId,i)"></button>
+                                                        class="p-button-rounded p-button-danger"
+                                                        (click)="deleteElection(electionDetail.elecId,i)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
@@ -240,23 +244,23 @@
 </div>
 <div style="margin-top:2%;"></div>
 <app-footer></app-footer>
-    <p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}"
-        [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false"
-        [transitionOptions]="'280ms'">
-        <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
-            <img src="assets\img\icon\status_yes.png" height="65" width="65">
-        </div>
-        <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
-            <H1>ลบข้อมูลการเลือกตั้งสำเร็จ</H1>
-        </div>
-    </p-dialog>
-    <p-dialog [(visible)]="displayModalFail" [modal]="true" [style]="{width: '30vw'}"
-        [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false"
-        [transitionOptions]="'280ms'">
-        <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
-            <img src="assets\img\icon\status_no.png" height="65" width="65">
-        </div>
-        <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
-            <H1>ลบข้อมูลการเลือกตั้งไม่สำเร็จ</H1>
-        </div>
-    </p-dialog>
+<p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}"
+    [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false"
+    [transitionOptions]="'280ms'">
+    <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
+        <img src="assets\img\icon\status_yes.png" height="65" width="65">
+    </div>
+    <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
+        <H1>ลบข้อมูลการเลือกตั้งสำเร็จ</H1>
+    </div>
+</p-dialog>
+<p-dialog [(visible)]="displayModalFail" [modal]="true" [style]="{width: '30vw'}"
+    [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false"
+    [transitionOptions]="'280ms'">
+    <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
+        <img src="assets\img\icon\status_no.png" height="65" width="65">
+    </div>
+    <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
+        <H1>ลบข้อมูลการเลือกตั้งไม่สำเร็จ</H1>
+    </div>
+</p-dialog>
